@@ -1054,6 +1054,7 @@ extern "C" {
 #define TCM_SETCURSEL	(TCM_FIRST+12)
 #define TCM_HITTEST	(TCM_FIRST+13)
 #define TCM_SETITEMEXTRA	(TCM_FIRST+14)
+
 #define TCM_ADJUSTRECT	(TCM_FIRST+40)
 #define TCM_SETITEMSIZE	(TCM_FIRST+41)
 #define TCM_REMOVEIMAGE	(TCM_FIRST+42)
@@ -1063,7 +1064,15 @@ extern "C" {
 #define TCM_SETTOOLTIPS	(TCM_FIRST+46)
 #define TCM_GETCURFOCUS	(TCM_FIRST+47)
 #define TCM_SETCURFOCUS	(TCM_FIRST+48)
-#define TCM_GETEXTENDEDSTYLE    (TCM_FIRST + 53)
+#define TCM_SETMINTABWIDTH	(TCM_FIRST + 49)
+#define TCM_DESELECTALL	(TCM_FIRST + 50)
+#if (_WIN32_IE >=0x0400)
+#define TCM_HIGHLIGHTITEM	(TCM_FIRST + 51)
+#define TCM_SETEXTENDEDSTYLE	(TCM_FIRST + 52)
+#define TCM_GETEXTENDEDSTYLE	(TCM_FIRST + 53)
+#define TCM_SETUNICODEFORMAT	CCM_SETUNICODEFORMAT
+#define TCM_GETUNICODEFORMAT	CCM_GETUNICODEFORMAT
+#endif /* _WIN32_IE >=0x0400 */
 #define TCN_KEYDOWN	TCN_FIRST
 #define TCN_SELCHANGE	(TCN_FIRST-1)
 #define TCN_SELCHANGING	(TCN_FIRST-2)
